[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Piece.gd" type="Script" id=1]
[ext_resource path="res://art/b27.png" type="Texture" id=2]
[ext_resource path="res://scenes/CornerMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://sound/rotate.wav" type="AudioStream" id=4]
[ext_resource path="res://sound/move.wav" type="AudioStream" id=5]
[ext_resource path="res://sound/harddrop.wav" type="AudioStream" id=6]
[ext_resource path="res://sound/lock.wav" type="AudioStream" id=7]
[ext_resource path="res://sound/gameover.wav" type="AudioStream" id=8]
[ext_resource path="res://sound/smash.wav" type="AudioStream" id=9]

[sub_resource type="TileSet" id=1]
0/name = "b27.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 800, 608 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0

[node name="Piece" type="Control"]
margin_right = 288.0
margin_bottom = 480.0
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, -96 )
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 196613, 0, 196608, 262147, 0, 196608, 262148, 0, 196608, 262149, 0, 196608 )

[node name="CornerMap" parent="TileMap" instance=ExtResource( 3 )]

[node name="RotateSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="MoveSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DropSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="LockSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="SmashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
